# src/model/score.js
@@ -1,11 +1,11 @@
 exports.Score = class Score {
     constructor(argmap) {
         if (argmap.has('json')) {
-            this.point = argmap.get('json').point;
+            this.points = argmap.get('json').points;
             this.description = argmap.get('json').description;
         } else {
-            if (argmap.has('point')) {
-                this.point = argmap.get('point');
+            if (argmap.has('points')) {
+                this.points = argmap.get('points');
             }
             if (argmap.has('description')) {
                 this.description = argmap.get('description');
